--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <i class="fas fa-eye"></i> Preview
                 </button>
                 <button class="action-btn export-btn">
-                    <i class="fas fa-download"></i> Export
+                    <i class="fas fa-download"></i> Design
                 </button>
                 <button class="action-btn share-btn">
                     <i class="fas fa-share-alt"></i> Share
