--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <button class="action-btn preview-btn">
                     <i class="fas fa-eye"></i> Preview
                 </button>
-                <button class="action-btn export-btn">
-                    <i class="fas fa-download"></i> Design
+                <button class="action-btn design-btn" onclick="window.location.href='transition.html'">
+                    <i class="fas fa-pencil-ruler"></i> Design Worksheet
                 </button>
                 <button class="action-btn share-btn">
                     <i class="fas fa-share-alt"></i> Share
