--- a/transition.html
+++ b/transition.html
@@ -129,7 +129,7 @@
             </div>
         </div>
         
-        <button class="back-btn" onclick="location.href='editor.html'">
+        <button class="back-btn" onclick="location.href='index.html'">
             <i class="fas fa-arrow-left"></i> Back to Questions
         </button>
     </div>
