--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="tool-btn" id="aiQuestionBtn">
                     <i class="fas fa-robot"></i> Generate from Syllabus
                 </button>
-                <button class="tool-btn" id="docImportBtn">
+                <button class="tool-btn" id="docImportBtn" onclick="window.location.href='import.html'">
                     <i class="fas fa-file-import"></i> Import Materials
                 </button>
             </div>
