--- a/import_materials/import.html
+++ b/import_materials/import.html
@@ -22,14 +22,14 @@
                 <button class="tool-btn" id="aiQuestionBtn">
                     <i class="fas fa-robot"></i> Generate from Syllabus
                 </button>
-                <button class="tool-btn" id="docImportBtn" onclick="window.location.href='import.html'">
+                <button class="tool-btn" id="docImportBtn" onclick="window.location.href='import_materials/import.html'">
                     <i class="fas fa-file-import"></i> Import Materials
                 </button>
             </div>
             
             <div class="tool-section">
                 <h3><i class="fas fa-tools"></i> Creation Tools</h3>
-                <button class="tool-btn" id="worksheetBtn" onclick="window.location.href='editor.html'">
+                <button class="tool-btn" id="worksheetBtn" onclick="window.location.href='index.html'">
                     <i class="fas fa-file-alt"></i> Worksheet
                 </button>
                 <button class="tool-btn" id="quizBtn">
