--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             
             <!-- Diagram/Flowchart Maker -->
-            <div class="creation-btn" onclick="location.href='editor.html'">
+            <div class="creation-btn" onclick="location.href='index.html'">
                 <div class="btn-icon">
                     <i class="fas fa-project-diagram"></i>
                 </div>
