--- a/designer/digital.html
+++ b/designer/digital.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="designer/digital.css">
 </head>
 <body>
     <div class="app-layout">
