--- a/designer/digital.html
+++ b/designer/digital.html
@@ -90,6 +90,6 @@
         </div>
     </div>
     
-    <script src="js/app.js"></script>
+    <script src="designer.digital.js"></script>
 </body>
 </html>
