--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             
             <!-- Interactive Quiz Maker -->
-            <div class="creation-btn" onclick="location.href='editor.html'">
+            <div class="creation-btn" onclick="location.href='index.html'">
                 <div class="btn-icon">
                     <i class="fas fa-question-circle"></i>
                 </div>
