--- a/designer/printable.html
+++ b/designer/printable.html
@@ -45,7 +45,7 @@
             <div class="problem" id="problem-1">
                 <div>
                     <span class="problem-number">1.</span>
-                    <span contenteditable="true" class="editable">Solve for 2 x 3 = 15</span>
+                    <span contenteditable="true" class="editable">Solve for x: 3x + 5 = 20</span>
                 </div>
                 <div class="answer-space"></div>
             </div>
@@ -61,7 +61,7 @@
             <div class="problem" id="problem-3">
                 <div>
                     <span class="problem-number">3.</span>
-                    <span contenteditable="true" class="editable">Simplify the expression: 36 = 49 - 26</span>
+                    <span contenteditable="true" class="editable">Simplify the expression: 49 - 26</span>
                 </div>
                 <div class="answer-space"></div>
             </div>
