--- a/transition.html
+++ b/transition.html
@@ -130,7 +130,7 @@
         </div>
         
         <button class="back-btn" onclick="location.href='index.html'">
-            <i class="fas fa-arrow-left"></i> Back to Questions
+            <i class="fas fa-arrow-left"></i> Back to Main Menu
         </button>
     </div>
 </body>
