--- a/designer/digital.html
+++ b/designer/digital.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta ame="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduCreate Studio</title>
     <!-- Modern Font: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +11,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="digital.css">
+    <link rel="stylesheet" href="designer/digital.css">
 </head>
 <body>
     <div class="app-layout">
@@ -90,6 +90,6 @@
         </div>
     </div>
     
-    <script src="digital.js"></script>
+    <script src="designer/digital.js"></script>
 </body>
 </html>
