--- a/designer/digital.html
+++ b/designer/digital.html
@@ -12,7 +12,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="designer/digital.css">
+    <link rel="stylesheet" href="digital.css">
 </head>
 <body>
     <div class="app-layout">
@@ -91,6 +91,6 @@
         </div>
     </div>
     
-    <script src="designer/digital.js"></script>
+    <script src="digital.js"></script>
 </body>
 </html>
