--- a/designer/printable.html
+++ b/designer/printable.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="designer/printable.css">
+    <link rel="stylesheet" href="printable.css">
     <title>Math Worksheet Designer</title>
 </head>
 <body>
@@ -76,6 +76,6 @@
         </div>
     </div>
 
-    <script src="designer/printable.js"></script>
+    <script src="printable.js"></script>
 </body>
 </html>
