--- a/designer/printable.html
+++ b/designer/printable.html
@@ -38,8 +38,8 @@
             <h1 contenteditable="true" class="editable">Mathematics Worksheet</h1>
             
             <div class="worksheet-header-info">
-                <div>Name: <span contenteditable="true" class="editable">______</span></div>
-                <div>Date: <span contenteditable="true" class="editable">______</span></div>
+                <div>Name: <span contenteditable="true" class="editable"></span></div>
+                <div>Date: <span contenteditable="true" class="editable"></span></div>
             </div>
             
             <div class="problem" id="problem-1">
