Update theme & UI

--- a/designer/digital.html
+++ b/designer/digital.html
@@ -18,9 +18,15 @@
     <div class="app-layout">
         <!-- LEFT SIDEBAR: Tools Palette -->
         <aside class="sidebar-left">
-            <div class="logo">
-                <i class="fas fa-pencil-alt"></i>
-                <h1>EduCreate</h1>
+            <div class="sidebar-header">
+                <a class="back-btn" href="../transition.html">
+                    <i class="fas fa-arrow-left"></i>
+                    <span>Back to Menu</span>
+                </a>
+                <a class="logo" href="../index.html">
+                    <i class="fas fa-pencil-alt"></i>
+                    <h1>EduCreate</h1>
+                </a>
             </div>
             <div class="tool-section">
                 <h3><i class="fas fa-plus-circle"></i> Add Element</h3>
